Refactorizado paquete de seguridad de Spring